--- a/frontend/clapp/src/App.css
+++ b/frontend/clapp/src/App.css
@@ -3,8 +3,80 @@
   --backrgound: #1B1B1B;
   --contrast: #F3F3F3;
 }
+.App{
+  margin-top: 300px;
+}
 body {
   text-align: center;
   background-color: var(--backrgound);
   color: var(--contrast);
+  font-family: 'Roboto', sans-serif;
+}
+.navbar{
+  width: 100%;
+  height: 50px;
+  background-color: var(--primary);
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: 0.5s;
+}
+.extended{
+  width: 100%;
+  height: 300px;
+  align-items: baseline;
+  padding-top: 10px;
+}
+.navbar.extended .links{
+  position: absolute;
+  top: 0%;
+}
+.navbar.extended .hero{
+  position: relative;
+  top: 20%;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+}
+.navbar.extended .hero .banner{
+  width: 500px;
+  height: 200px;
+}
+.navbar.extended .hero h1{
+  font-size: 80px;
+  position: absolute;
+  left: 0%;
+  top: 40%;
+}
+.navbar .logo{
+  background-color: white;
+  width: 100px;
+  height: 40px;
+  margin-left: 10px;
+  position: absolute;
+  left: 0%;
+}
+.navbar .links{
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+}
+.navbar .user{
+  background-color: white;
+  width: 40px;
+  height: 40px;
+  border-radius: 20px;
+  position:  absolute;
+  right: 0%;
+  margin-right: 10px;
+  align-items: center;
+  display: flex;
+}
+.navbar .user h2{
+  width: 200px;
+  position: absolute;
+  right: 0%;
 }
