--- a/frontend/clapp/src/Foods.css
+++ b/frontend/clapp/src/Foods.css
@@ -7,10 +7,11 @@
     padding: 10px;
 }
 
-.items {
+.item {
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
+
 }
 
 .movie-title-small-card {
@@ -24,3 +25,10 @@
 .underline {
     border-bottom: 1px solid white;
 }
+
+ul {
+    list-style-type: disc;
+    margin: 0;
+    padding: 0;
+    padding-left: 20px;
+} 
