--- a/frontend/clapp/src/App.css
+++ b/frontend/clapp/src/App.css
@@ -15,14 +15,18 @@ body {
 .navbar{
   width: 100%;
   height: 50px;
-  background-color: var(--primary);
+  background: rgb(193,48,48);
   position: fixed;
   top: 0%;
   left: 0%;
   display: flex;
   justify-content: center;
-  align-items: center;
-  transition: 0.5s;
+  align-items: baseline;
+  padding-top: 10px;
+  transition: 0.2s;
+}
+.navbar .hero{
+  display: none;
 }
 .extended{
   width: 100%;
@@ -30,10 +34,14 @@ body {
   align-items: baseline;
   padding-top: 10px;
   overflow: hidden;
+  background: rgb(193,48,48);
+  background: linear-gradient(180deg, rgba(193,48,48,1) 20%, rgba(27,27,27,1) 100%);
 }
 .navbar.extended .links{
   position: absolute;
-  top: -2%;
+}
+.navbar .links h1{
+  margin-top: 0px;
 }
 .navbar.extended .hero{
   position: relative;
@@ -41,18 +49,27 @@ body {
   display: flex;
   width: 100%;
   justify-content: center;
+  display: block;
 }
 .navbar.extended .hero .banner{
   padding-top: 20px;
   height: 100%;
   width: 100%;
   z-index: -1;
+  mask: linear-gradient(
+    to bottom,
+    rgba(0, 0, 0, 0) 0%,
+    rgba(0, 0, 0, 1) 0.5%,
+    rgba(0, 0, 0, 1) 25%,
+    rgba(0, 0, 0, 0) 70.5%
+  );
 }
 .navbar.extended .hero h1{
   font-size: 80px;
   position: absolute;
   left: 0%;
   top: 35%;
+  z-index: 1;
 }
 .navbar .logo{
   background-color: white;
