--- a/frontend/clapp/src/Movies.css
+++ b/frontend/clapp/src/Movies.css
@@ -2,6 +2,16 @@
   text-align: left;
 }
 
+.movies {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0 100px;
+  margin: auto;
+}
+
 .movieCard {
   height: 400px;
   width: 250px;
@@ -10,6 +20,11 @@
   color: black;
   text-align: left;
   padding: 20px;
+  
+}
+
+.movieTitle {
+  margin-top: 35px;
 }
 
 .movieData {
@@ -36,3 +51,36 @@
   margin: -20px;
   border-radius: 10px 10px 0 0;
 }
+
+.bigMovieCard {
+  width: 500px;
+  height: 700px;
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  color: black;
+  text-align: left;
+  padding: 20px;
+}
+
+.bigMovieImg {
+  width: 540px;
+  margin: -20px;
+  border-radius: 10px 10px 0 0;
+}
+
+.showDetails {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
