--- a/frontend/clapp/src/App.css
+++ b/frontend/clapp/src/App.css
@@ -4,19 +4,20 @@
   --contrast: #F3F3F3;
 }
 .App{
-  margin-top: 300px;
+ 
 }
 body {
   text-align: center;
   background-color: var(--backrgound);
   color: var(--contrast);
   font-family: 'Roboto', sans-serif;
+  margin: 0px !important;
 }
 .navbar{
   width: 100%;
   height: 50px;
   background: rgb(193,48,48);
-  position: fixed;
+  position: relative;
   top: 0%;
   left: 0%;
   display: flex;
