--- a/frontend/clapp/src/Movies.css
+++ b/frontend/clapp/src/Movies.css
@@ -77,8 +77,9 @@
   width: 100%;
   height: 100%;
   z-index: 100;
-  position: absolute;
-  top: 50%;
+  position: fixed;
+  margin-top: 0px;
+  top: 0%;
   left: 50%;
   transform: translateX(-50%);
   background-color: rgba(0, 0, 0, 0.6);
