--- a/frontend/clapp/src/Foods.css
+++ b/frontend/clapp/src/Foods.css
@@ -43,12 +43,20 @@ ul {
 .big-card {
     background-color: white;
     border-radius: 10px;
-    height: 350px;
-    width: 250px;
+    height: 380px;
+    width: 325px;
 }
 
 .clapboard {
+    position: absolute;
+   
+}
+.clapboard-top {
+    transform: rotate(-15deg);
+    height: 40px;
     position: relative;
+    top: -35px;
+    left: -5px;
 }
 
 .big-card p {
@@ -57,4 +65,26 @@ ul {
 
 .sizes {
     background-color: var(--primary);
+    margin: 5px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: left;
+    height: 70px;
+}
+
+.sizes p {
+    margin: 5px;
+    font-size: 16px;
+    color: white;
+}
+
+.align-bot {
+    align-self: end;
+}
+
+.big-card-title {
+    padding: 15px;
+    margin: 0;
+    font-weight: bold;
+    font-size: 20px;
 }
