--- a/frontend/clapp/src/Movies.css
+++ b/frontend/clapp/src/Movies.css
@@ -1,5 +1,6 @@
 .moviesHeader {
   text-align: left;
+  margin-left: 20px;
 }
 
 .movies {
@@ -20,7 +21,12 @@
   color: black;
   text-align: left;
   padding: 20px;
+  transition: all 0.25s;
   
+}
+
+.movieCard:hover {
+  scale: 1.05;
 }
 
 .movieTitle {
@@ -38,6 +44,13 @@
   border-radius: 10px;
   border: none;
   color: white;
+  cursor: pointer;
+  transition: all 0.25s;
+}
+
+.detailsBtn:hover {
+  scale: 1.1;
+  color: #000;
 }
 
 .btn {
@@ -88,6 +101,7 @@
 .closeDiv {
   display: flex;
   justify-content: end;
+  cursor: pointer;
 }
 
 .close {
