--- a/frontend/clapp/src/Foods.css
+++ b/frontend/clapp/src/Foods.css
@@ -69,12 +69,13 @@ ul {
     border-radius: 10px;
     display: flex;
     justify-content: left;
-    height: 70px;
+    height: 80px;
 }
 
 .sizes p {
     margin: 5px;
-    font-size: 16px;
+    margin-left: 10px;
+    font-size: 20px;
     color: white;
 }
 
