--- a/frontend/clapp/src/Foods.css
+++ b/frontend/clapp/src/Foods.css
@@ -1,7 +1,7 @@
 .small-card {
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    width: 25%;
-    height: 40%;
+    width: 300px;
+    height: fit-content;
     background-color:  var(--primary);
     border-radius: 10px;
     padding: 10px;
@@ -43,20 +43,20 @@ ul {
 .big-card {
     background-color: white;
     border-radius: 10px;
-    height: 380px;
+    height: 350px;
     width: 325px;
 }
 
 .clapboard {
     position: absolute;
-   
 }
+
 .clapboard-top {
     transform: rotate(-15deg);
     height: 40px;
     position: relative;
-    top: -35px;
-    left: -5px;
+    top: -36px;
+    left: -8px;
 }
 
 .big-card p {
@@ -65,7 +65,7 @@ ul {
 
 .sizes {
     background-color: var(--primary);
-    margin: 5px;
+    margin: 10px;
     border-radius: 10px;
     display: flex;
     justify-content: left;
