--- a/frontend/clapp/src/Movies.css
+++ b/frontend/clapp/src/Movies.css
@@ -20,14 +20,22 @@
   color: black;
   text-align: left;
   padding: 20px;
-  
+  overflow: hidden;
 }
-
+.movieCard:hover .movieImg{
+  height: 0%;
+  opacity: 0;
+}
+.movieCard .desc{
+  max-height: 250px;
+  overflow-y: auto;
+}
 .movieTitle {
-  margin-top: 35px;
+  margin-top: 0px;
 }
 
 .movieData {
+  margin-top: -30px;
   display: flex;
   justify-content: space-between;
 }
@@ -47,9 +55,12 @@
 }
 
 .movieImg {
-  width: 290px;
-  margin: -20px;
-  border-radius: 10px 10px 0 0;
+  height: 90%;
+  width: 100%;
+  margin: 0px;
+  border-radius: 10px;
+  z-index: -1;
+  transition: 0.5s;
 }
 
 .bigMovieCard {
