--- a/frontend/clapp/src/Tickets.css
+++ b/frontend/clapp/src/Tickets.css
@@ -29,3 +29,72 @@
 .seenDetailsBtn {
     margin-top: 20px;
 }
+
+.showReview {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  z-index: 100;
+  position: fixed;
+  margin-top: 0px;
+  top: 0%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.9);
+}
+
+.review {
+    height: 500px;
+    width: 1000px;
+    background-color: white;
+    display: flex;
+    flex-direction: row;
+    border-radius: 10px;
+    color: black;
+    text-align: left;
+    padding: 20px;
+  }
+
+.moviePic .movieImg {
+    width: 300px;
+}
+.moviePic {
+    margin: 50px 10px;
+}
+
+.allData {
+    width: 100%;
+    margin: 10px;
+
+}
+
+.data {
+    width: 100%;
+    margin: 50px 0 0 0;
+    display: flex;
+    align-items: start;
+    justify-content: space-between;
+}
+
+.inputReview {
+    width: 100%;
+    height: 250px;
+    margin-top: 10px;
+}
+
+.addReview {
+    margin-top: 20px;
+}
+
+.movieData p {
+    margin-top: 35px;
+}
+
+.reviewStars {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
