--- a/frontend/clapp/src/App.css
+++ b/frontend/clapp/src/App.css
@@ -171,3 +171,19 @@ a:hover{
   left: 10%;
   transform: rotate(10deg);
 }
+
+
+.loginBtn {
+  padding: 10px 20px;
+  background-color: var(--primary);
+  color: white;
+  transform: scale(1.1);
+  border-radius: 10px;
+  border: none;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+}
+
+.loginBtn:hover {
+  transform: scale(1.1);
+}
