--- a/frontend/clapp/src/Tickets.css
+++ b/frontend/clapp/src/Tickets.css
@@ -7,9 +7,9 @@
 }
 
 .myReview {
-    background-color: var(--primary);
+    background-color: white;
     border-radius: 10px;
-    color: white;
+    color: black;
     padding: 10px;
     height: 150px;
 }
