--- a/frontend/clapp/src/Tickets.css
+++ b/frontend/clapp/src/Tickets.css
@@ -3,7 +3,11 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    margin-top: 10px;
+    margin-top: 5px;
+}
+
+.rating p {
+    margin: 7px 0;
 }
 
 .myReview {
@@ -23,7 +27,7 @@
 }
 
 .seenMovieCard {
-    height: 500px;
+    height: 400px;
 }
 
 .seenDetailsBtn {
@@ -101,4 +105,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+.myTicketBtns {
+    gap: 20px;
 }
