--- a/frontend/clapp/src/Order.css
+++ b/frontend/clapp/src/Order.css
@@ -4,3 +4,41 @@
     background-color: var(--primary);
     position: absolute;
 }
+
+.final-order-container {
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clapboard {
+    position: relative;
+}
+
+.infos {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    top: 165px;
+    left: 40px;
+    width: 100%;
+
+}
+
+.date {
+    right: 100px;
+}
+
+
+
+.orderDetails {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    bottom: 100px;
+    left: 40px;
+    width: 100%;
+}
