--- a/frontend/clapp/src/Foods.css
+++ b/frontend/clapp/src/Foods.css
@@ -157,3 +157,11 @@ ul {
     width: 40px;
     height: 40px;
 }
+.confirm-btn{
+    background-color: var(--primary);
+    height: 40px;
+    text-align: center;
+    padding: 10px;
+    border-radius: 10px;
+    margin-top: 400px;
+}
